--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </ul>
             </div>
             <div class="right">
-                <img src="C:\Users\Aluno\Videos\site ifpi\topo_ifpi.png" alt="">
+                <img src="topo_ifpi.png" alt="">
             </div>
         </div>
     </main>
