--- a/matricula.html
+++ b/matricula.html
@@ -51,7 +51,7 @@
                 </form>
             </div>
             <div class="right">
-                <img src="C:\Users\Aluno\Videos\site ifpi\topo_ifpi.png" alt="">
+                <img src="topo_ifpi.png" alt="">
             </div>
         </div>
     </main>
