--- a/index.html
+++ b/index.html
@@ -6,15 +6,26 @@
     <title>IFPI</title>
     <link rel="stylesheet" href="ifpi.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
         <div class="w3-bar w3-white w3-opacity-min w3-large">
             <div class="w3-right w3-hide-small">
-                <a href="index.html" class="w3-bar-item w3-button w3-hide-small">Inicio</a>
-                <a href="cursos.html" class="w3-bar-item w3-button w3-hide-small">Cursos</a>
-                <a href="ingresso.html" class="w3-bar-item w3-button w3-hide-small">Como Ingressar</a>
-                <a href="matricula.html" class="w3-bar-item w3-button w3-hide-small">Efetuar Matrícula</a>
+                <a href="index.html"class="w3-bar-item w3-button w3-padding-large w3-hide-small">Inicio</a>
+                <div class="w3-dropdown-hover w3-hide-small">
+                    <button class="w3-padding-large w3-button" title="More">Cursos <i class="fa fa-caret-down"></i></button>     
+                    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                
+                      <a href="#" class="w3-bar-item w3-button">Administração</a>
+                      <a href="#" class="w3-bar-item w3-button">Agropecoarea</a>
+                      <a href="#" class="w3-bar-item w3-button">Informatica</a>
+                    </div>
+                  </div>
+                <a href="ingresso.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Como Ingressar</a>
+                <a href="matricula.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">Efetuar Matrícula</a>
             </div>
         </div>
     </header>
